--- a/app/globals.css
+++ b/app/globals.css
@@ -60,3 +60,11 @@
 .cart-container::-webkit-scrollbar-track {
   background-color: #9c9c9c;
 }
+
+.swiper {
+  padding: 20px !important;
+}
+
+body {
+  overflow-x: hidden;
+}
